Added buildable docker compose. Added commit hash insert into main execution. Added test portfolio endpoint. Add swagger generation in docker file
